force-app/main/default/objects/RD_PressureClassConnections__c/RD_PressureClassConnections__c.object-meta.xml
<CustomObject>
    <label>RD PressureClassConnections</label>
    <nameField>
        <label>PressureClassConnectionName</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RD_PressureClassConnections</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>