force-app/main/default/objects/RD_PressureClassConnections__c/fields/CDC_Ext_ID__c.field-meta.xml
<CustomField>
    <fullName>CDC_Ext_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>CDC_Ext_ID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>