force-app/main/default/objects/RD_PressureClassConnections__c/fields/HIC_OrderDesc__c.field-meta.xml
<CustomField>
    <fullName>HIC_OrderDesc__c</fullName>
    <label>HIC OrderDesc</label>
    <length>60</length>
    <type>Text</type>
</CustomField>