force-app/main/default/objects/RD_PressureClassConnections__c/fields/HOC__c.field-meta.xml
<CustomField>
    <fullName>HOC__c</fullName>
    <label>HOC</label>
    <length>50</length>
    <type>Text</type>
</CustomField>