force-app/main/default/objects/RD_PressureClassConnections__c/fields/HOC_OrderDesc__c.field-meta.xml
<CustomField>
    <fullName>HOC_OrderDesc__c</fullName>
    <label>HOC OrderDesc</label>
    <length>60</length>
    <type>Text</type>
</CustomField>