force-app/main/default/objects/RD_PressureClassConnections__c/fields/STC__c.field-meta.xml
<CustomField>
    <fullName>STC__c</fullName>
    <label>STC</label>
    <length>30</length>
    <type>Text</type>
</CustomField>