force-app/main/default/objects/RD_PressureClassConnections__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CDC_Ext_ID__c</columns>
    <columns>Flag__c</columns>
    <columns>HCLASS__c</columns>
    <columns>HIC__c</columns>
    <columns>HIC_OrderDesc__c</columns>
    <columns>HOC__c</columns>
    <columns>HOC_OrderDesc__c</columns>
    <columns>PTC__c</columns>
    <columns>STC__c</columns>
    <columns>SZC__c</columns>
    <columns>Table_Type__c</columns>
    <columns>MNFA__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>